invidious/invidious-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: invidious
  name: invidious
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: invidious
  strategy: {}
  template:
    metadata:
      annotations:
        avp.kubernetes.io/path: "kv/data/invidious"
        avp.kubernetes.io/secret-version: "2"
      labels:
        io.kompose.service: invidious
    spec:
      containers:
      - name: invidious
        image: quay.io/invidious/invidious:latest
        livenessProbe:
          exec:
            command:
            - wget -nv --tries=1 --spider http://127.0.0.1:3000/api/v1/comments/jNQXAC9IVRw
              || exit 1
          failureThreshold: 2
          periodSeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 3000
      restartPolicy: Always
