invidious/invidious-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  annotations:
    cert-manager.io/cluster-issuer: le-example-http
    external-dns.alpha.kubernetes.io/hostname: invidious.dev-riles.xyz.
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "invidious.dev-riles.xyz"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: invidious
              port:
                number: 3000
  tls:
  - hosts:
    - invidious.dev-riles.xyz
    secretName: tls-invidious-ingress-http
